feat:(Mobile): connect the app to the backend API
